Tool parameters - Allow using Jandex for classes that aren't in the initial index
Fixes #1036